<resources>
    <string name="app_name">whooooo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="TotalVotes">Total votes</string>
    <string name="welcome_back">Welcome back</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="recovery">Recovery</string>
    <string name="get_new_password">Get new password</string>
    <string name="input_login">Input login</string>
    <string name="join_us">Join us</string>
</resources>